XMLExper/m12/m12_295_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘const tinyxml2::XMLElement* tinyxml2::XMLNode::FirstChildElement(const char*) const’:
tinyxml2.cpp:1039:102: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLDeclaration*’ (conversion casts away constness)
 1039 |     for( const XMLNode* node = _firstChild; node; /*PCI*/dynamic_cast<tinyxml2::XMLDeclaration*>(node) = node->_next ) {
      |                                                                                                      ^
diff: tinyxml2.o: No such file or directory
